--- a/index.html
+++ b/index.html
@@ -1,2 +1,18 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>test</title>
+  </head>
+  <body>
 
-test
+    <ul>
+  <li><a href="#">home</a></li>
+  <li><a href="#">archives</a></li>
+  <li><a href="#">tags</a></li>
+  <li><a href="#">categories</a></li>
+  <li><a href="#">about</a></li>
+</ul>
+
+  </body>
+</html>
