--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
   </head>
   <body>
 <ul>
-  <li><a href="#">home</a></li>
-  <li><a href="#">archives</a></li>
-  <li><a href="#">tags</a></li>
-  <li><a href="#">categories</a></li>
-  <li><a href="#">about</a></li>
+  <li style="a1"><a style="a2" href="#">home</a></li>
+  <li style="a1"><a style="a2" href="#">archives</a></li>
+  <li style="a1"><a style="a2" href="#">tags</a></li>
+  <li style="a1"><a style="a2" href="#">categories</a></li>
+  <li style="a1"><a style="a2" href="#">about</a></li>
 </ul>
   </body>
 </html>
-
