--- a/index.html
+++ b/index.html
@@ -6,12 +6,10 @@
      <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-<ul>
-  <li style="a1"><a style="a2" href="#">home</a></li>
-  <li style="a1"><a style="a2" href="#">archives</a></li>
-  <li style="a1"><a style="a2" href="#">tags</a></li>
-  <li style="a1"><a style="a2" href="#">categories</a></li>
-  <li style="a1"><a style="a2" href="#">about</a></li>
-</ul>
+<p>Перед скриптом...</p>
+  <script>
+    alert( 'Привет, мир!' );
+  </script>
+<p>После скрипта...</p>
   </body>
 </html>
