--- a/index.html
+++ b/index.html
@@ -6,10 +6,6 @@
      <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-<p>Перед скриптом...</p>
-  <script>
-    alert( 'Привет, мир!' );
-  </script>
-<p>После скрипта...</p>
+  <script src="alert.js"></script>
   </body>
 </html>
