--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
      <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-  <script src="/js/alert.js"></script>
+  <script src="js/alert.js"></script>
   </body>
 </html>
